# cpp-smarthome-project

./: README.md
dobot_magicianlite/: PetProject_grepper.py  PetProject_xyCam.py
ems_server/: BluetoothManager.cpp  BluetoothManager.h  CMakeLists.txt  DBManager.cpp  DBManager.h  README.md  TCPServer.cpp  TCPServer.h  main.cpp
